fixed: little bugs

--- a/Präsentations-Project/k01/k01.md
+++ b/Präsentations-Project/k01/k01.md
@@ -23,6 +23,5 @@ Ungeordnete Liste 3
 Ungeordnete Liste 4
 Ungeordnete Liste 5
 
-Hier steht eine Formel: $$ \sum_{n} (2n+1) $$ mitten im Text.
-
-Diese hier steht alleine:
+Rendern von LaTeX:
+\sum _{n}2n+\dfrac {1} {2}
